lab/apps/heimdall/heimdall-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall        # < name of the deployment
  namespace: heimdall   # < namespace where place the deployment and pods
  labels:
    app: heimdall       # < label for tagging and reference
spec:
  replicas: 1           # < number of pods to deploy
  selector:
    matchLabels:
      app: heimdall
  strategy:
    rollingUpdate:
      maxSurge: 1       # < The number of pods that can be created above the desired amount of pods during an update
      maxUnavailable: 1 # < The number of pods that can be unavailable during the update process
    type: RollingUpdate # < New pods are added gradually, and old pods are terminated gradually
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      volumes:
      - name: heimdall  # < linkname of the volume for the pvc
        persistentVolumeClaim:
          claimName: heimdall # < pvc name we created in the previous yaml
      - name: prod-heimdall-${SECRET_INT_CERT_DOMAIN}
        secret:
          secretName: prod-heimdall-${SECRET_INT_CERT_DOMAIN} # < the name ssl certificate, will be created in the ingress yaml
      containers:
      - image: ghcr.io/linuxserver/heimdall:v2.4.13-ls188 # < the name of the docker image we will use
        name: heimdall                      # < name of container
        imagePullPolicy: Always  # < always use the latest image when creating container/pod
        resources:
          limits:
            memory: "120Mi"
            cpu: "150m"
          requests:
            memory: "120Mi"
            cpu: "150m"
        livenessProbe:
          httpGet:
            port: 443
            scheme: HTTPS
            path: / 
        env:                                # < the environment variables required (see container documentation)
        - name: PGID
          value: "100" # < group "user"
        - name: PUID
          value: "1041" # < user "docker"
        - name: TZ
          value: Europe/London
        ports:                              # < the ports required (see container documentation)
         - containerPort: 80
           name: http-80
           protocol: TCP
         - containerPort: 443
           name: https-443
           protocol: TCP
        volumeMounts:                       # < the volume mount in the container. Look at the relation volumelabel->pvc->pv
         - mountPath: /config               # < mount location in the container
           name: heimdall               # < volumelabel configured earlier in the yaml file
           subPath: config                  # < subfolder in the nfs share to be mounted
